# nanocv

./: Cargo.toml  README.md  run-all-examples.sh
examples/: horizontal_convolution.rs  load_save.rs  negative_image.rs  vertical_convolution.rs
src/: lib.rs
src/filter/: map.rs  mirror.rs  mod.rs  plan.rs  update.rs
src/filter/convolution/: horizontal.rs  mod.rs  operator.rs  plan.rs  vertical.rs
src/filter/resize/: mod.rs  nearest.rs
src/geometry/: mapping.rs  mod.rs  point.rs  range.rs  range2d.rs  vec2d.rs
src/image/: buffer.rs  dimensions.rs  mod.rs  traits.rs
